objects/Contact/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <description>This field is created as part of Assignment, 
This will uniquely Identify a Contact in an External system,
Will be using it in ProductInformationREST Apex class</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>