objects/Contact/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <description>This picklist will hold the 2 Digit Country Codes</description>
    <label>Home Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Country</valueSetName>
    </valueSet>
</CustomField>